--- a/iron-comments/index.html
+++ b/iron-comments/index.html
@@ -12,8 +12,17 @@
 <body>
 
     <form id="form-container">
-        Name: Email: Comment: Receive email updates? Submit
+        <label for="">Name:</label>
+        <input type="text" name="" id="">
+        <label for="">Email</label>
+        <input type="email">
+        <label for="">Content</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div>
+            <label for="">Receive email updates?</label>
+            <input type="checkbox" name="" id="">
+        </div>
+        <button class="blue-btn">Submit</button>
     </form>
-
 </body>
 </html>
