--- a/iron-comments/index.html
+++ b/iron-comments/index.html
@@ -12,12 +12,12 @@
 <body>
 
     <form id="form-container">
-        <label for="">Name:</label>
-        <input type="text" name="" id="">
-        <label for="">Email</label>
-        <input type="email">
-        <label for="">Content</label>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <label for="name">Name:</label>
+        <input type="text" id="name">
+        <label for="email">Email</label>
+        <input type="email" id="email">
+        <label for="content">Content</label>
+        <textarea id="content" cols="30" rows="10"></textarea>
         <div>
             <label for="">Receive email updates?</label>
             <input type="checkbox" name="" id="">
