--- a/iron-comments/index.html
+++ b/iron-comments/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title> Iron Comments </title>
-    
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 <body>
 
-    <form id="form-container">
+    <form action="#" method="GET" id="form-container">
         <label for="name">Name:</label>
         <input type="text" id="name">
-        <label for="email">Email</label>
+        <label for="email">Email:</label>
         <input type="email" id="email">
-        <label for="content">Content</label>
+        <label for="content">Content:</label>
         <textarea id="content" cols="30" rows="10"></textarea>
-        <div>
-            <label for="">Receive email updates?</label>
-            <input type="checkbox" name="" id="">
-        </div>
-        <button class="blue-btn">Submit</button>
+        <fieldset>
+            <label for="confirmation">Receive email updates?</label>
+            <input type="checkbox" required name="" id="confirmation">
+        </fieldset>
+        <input type="submit" class="blue-btn"/>
     </form>
 </body>
 </html>
